test/Vehicle/Test/CompileMode/Error/ParsingErrors/missingVariablesLambda.vcl
test1 : Bool -> Bool
test1 = \ -> True